[gd_scene load_steps=20 format=2]

[ext_resource path="res://Other/Unutterable-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Images/Background.png" type="Texture" id=2]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Images/Grabber.png" type="Texture" id=4]
[ext_resource path="res://Audio/Theme.wav" type="AudioStream" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 color : hint_color;
uniform float multiplier = 0.2;
uniform float softness = 1.5;

void fragment() {
	float value = distance(UV, vec2(0.5));
	COLOR = vec4(color.rgb, smoothstep(multiplier, softness, value));
}"

[sub_resource type="ShaderMaterial" id=13]
shader = SubResource( 1 )
shader_param/color = Color( 0, 0, 0, 1 )
shader_param/multiplier = 0.2
shader_param/softness = 2.0

[sub_resource type="DynamicFont" id=5]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0, 0, 0.0784314 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.196078 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=7]
size = 56
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 96
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxLine" id=9]
color = Color( 0.301961, 0.301961, 0.301961, 1 )
thickness = 10

[sub_resource type="StyleBoxLine" id=11]
color = Color( 0.6, 0.6, 0.6, 1 )
thickness = 10

[sub_resource type="StyleBoxLine" id=10]
color = Color( 0.6, 0.6, 0.6, 1 )
thickness = 10

[sub_resource type="DynamicFont" id=12]
size = 80
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Vignette" type="ColorRect" parent="."]
material = SubResource( 13 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -64.0
margin_right = -500.0
margin_bottom = -15.0

[node name="MainMenu" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1390.0
margin_bottom = 1129.0

[node name="Title" type="Label" parent="MarginContainer/MainMenu"]
margin_right = 1390.0
margin_bottom = 460.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "scared to death"
valign = 1

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/MainMenu"]
margin_top = 464.0
margin_right = 1390.0
margin_bottom = 924.0
size_flags_vertical = 3

[node name="PlayButton" type="Button" parent="MarginContainer/MainMenu/Buttons"]
margin_right = 276.0
margin_bottom = 150.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "play"
align = 0

[node name="OptionsButton" type="Button" parent="MarginContainer/MainMenu/Buttons"]
margin_top = 154.0
margin_right = 459.0
margin_bottom = 305.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "options"
align = 0

[node name="QuitButton" type="Button" parent="MarginContainer/MainMenu/Buttons"]
margin_top = 309.0
margin_right = 228.0
margin_bottom = 460.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "quit"
align = 0

[node name="Credits" type="Label" parent="MarginContainer/MainMenu"]
margin_top = 928.0
margin_right = 1390.0
margin_bottom = 1129.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 7 )
text = "

made by noble games"
valign = 2

[node name="OptionsMenu" type="VBoxContainer" parent="MarginContainer"]
visible = false
margin_right = 1390.0
margin_bottom = 1129.0

[node name="Title" type="Label" parent="MarginContainer/OptionsMenu"]
margin_right = 1405.0
margin_bottom = 494.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "options"
valign = 1

[node name="Elements" type="VBoxContainer" parent="MarginContainer/OptionsMenu"]
margin_top = 498.0
margin_right = 1405.0
margin_bottom = 992.0
size_flags_vertical = 3

[node name="FullscreenToggle" type="Button" parent="MarginContainer/OptionsMenu/Elements"]
margin_right = 1080.0
margin_bottom = 162.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "toggle fullscreen"
align = 0

[node name="Volume" type="VBoxContainer" parent="MarginContainer/OptionsMenu/Elements"]
margin_top = 166.0
margin_right = 1405.0
margin_bottom = 328.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VolumeText" type="Label" parent="MarginContainer/OptionsMenu/Elements/Volume"]
margin_right = 1405.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="MarginContainer/OptionsMenu/Elements/Volume"]
margin_top = 114.0
margin_right = 1405.0
margin_bottom = 162.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_icons/grabber_highlight = ExtResource( 4 )
custom_icons/grabber = ExtResource( 4 )
custom_styles/slider = SubResource( 9 )
custom_styles/grabber_area_highlight = SubResource( 11 )
custom_styles/grabber_area = SubResource( 10 )
min_value = -18.0
max_value = 6.0
value = -6.0

[node name="BackButton" type="Button" parent="MarginContainer/OptionsMenu/Elements"]
margin_top = 332.0
margin_right = 215.0
margin_bottom = 494.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "back"
align = 0

[node name="Credits" type="Label" parent="MarginContainer/OptionsMenu"]
margin_top = 996.0
margin_right = 1405.0
margin_bottom = 1129.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 7 )
text = "
made by noble games"
valign = 2

[node name="Theme_Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 8.0
autoplay = true

[connection signal="pressed" from="MarginContainer/MainMenu/Buttons/PlayButton" to="." method="start_game"]
[connection signal="pressed" from="MarginContainer/MainMenu/Buttons/OptionsButton" to="." method="open_options_menu"]
[connection signal="pressed" from="MarginContainer/MainMenu/Buttons/QuitButton" to="." method="quit_game"]
[connection signal="pressed" from="MarginContainer/OptionsMenu/Elements/FullscreenToggle" to="." method="toggle_fullscreen"]
[connection signal="value_changed" from="MarginContainer/OptionsMenu/Elements/Volume/VolumeSlider" to="." method="change_volume"]
[connection signal="pressed" from="MarginContainer/OptionsMenu/Elements/BackButton" to="." method="exit_options_menu"]
[connection signal="finished" from="Theme_Audio" to="." method="restart_music"]
